--- a/Patrija.Web/Views/_Layout.cshtml
+++ b/Patrija.Web/Views/_Layout.cshtml
@@ -15,8 +15,10 @@
     }
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-    @Styles.Render("~/css/style.min.css")
-    @Scripts.Render("~/js/global.min.js")
+    @Styles.Render("~/bundles-css/")
+
+    @RazorHelper.RenderScripts(true, "~/bundles-js/")
+
 </head>
 <body>
 @{
