--- a/Patrija.Web/Views/Shared/DisplayTemplates/UntaggedFeatureViewModel.cshtml
+++ b/Patrija.Web/Views/Shared/DisplayTemplates/UntaggedFeatureViewModel.cshtml
@@ -9,17 +9,23 @@
     <div class="wrap">
         <div class="featured-project__item featured-project__item--@positionClassSuffix">
             <div class="featured-project__text">
-                <h2 class="h2 featured-project__title">@Model.Title</h2>
-                <p class="featured-project__text">@Model.Text</p>
+                @if (!string.IsNullOrWhiteSpace(Model.Title))
+                {
+                    <h2 class="h2 featured-project__title">@Model.Title</h2>
+                }
+                @if (!string.IsNullOrWhiteSpace(Model.Text))
+                {
+                    <p class="featured-project__text">@Model.Text</p>
+                }
                 @Html.Partial("Link", Model.ReadMore, new ViewDataDictionary() { { "className", "btn" } })
             </div>
-			<div class="featured-project__image-outer @(Model.ContentPosition == ContentPosition.Right ? "featured-project__image-outer--reverse" : string.Empty)">
+            <div class="featured-project__image-outer @(Model.ContentPosition == ContentPosition.Right ? "featured-project__image-outer--reverse" : string.Empty)">
                 <div class="featured-project__mask featured-project__mask--@positionClassSuffix">
                     @if (Model.AdditionalImage != null)
                     {
                         <img class="featured-project__additional-image" src="@Model.AdditionalImage.Url" alt="@Model.AdditionalImage.AlternateText">
                     }
-                    <div class="featured-project__image has-cover" style="background-image: url('@(Model.Image.Url)');"></div>
+                    <div class="featured-project__image has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
                 </div>
             </div>
         </div>
