--- a/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
@@ -4,18 +4,28 @@
 <div class="about-us">
     <div class="wrap wrap--small">
         <div class="about-us__content">
-            <h6 class="h6 about-us__tag">@Model.Tag</h6>
-            <h2 class="h2 about-us__title">@Model.Title</h2>
-            <p class="about-us__text">@Model.Text</p>
+            @if (!string.IsNullOrWhiteSpace(Model.Tag))
+            {
+                <h6 class="h6 about-us__tag">@Model.Tag</h6>
+            }
+            @if (!string.IsNullOrWhiteSpace(Model.Title))
+            {
+                <h2 class="h2 about-us__title">@Model.Title</h2>
+            }
+            @if (!string.IsNullOrWhiteSpace(Model.Text))
+            {
+                <p class="about-us__text">@Model.Text</p>
+            }
+
             @Html.Partial("Link", Model.Link, new ViewDataDictionary() { { "className", "btn" } })
-			<div class="about-us__image-outer">
+            <div class="about-us__image-outer">
                 <div class="about-us__images">
                     <div class="about-us__image">
-                        <div class="about-us__img has-cover" style="background-image: url('@Model.Image.Url');"></div>
+                        <div class="about-us__img has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
                     </div>
                     @*<div class="about-us__shape">
-                    <img src="{{shape}}" alt="">
-                    </div>*@
+                <img src="{{shape}}" alt="">
+                </div>*@
                 </div>
             </div>
         </div>
