--- a/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
@@ -5,13 +5,20 @@
         <div class="page-intro__container">
             <div class="page-intro__content">
                 <div class="page-intro__content-align">
-                    <h1 class="h2 page-intro__title">@Model.Title</h1>
-                    <p class="page-intro__text">@Model.PreviewText</p>
+                    @if (!string.IsNullOrWhiteSpace(Model.Title))
+                    {
+                        <h1 class="h2 page-intro__title">@Model.Title</h1>
+                    }
+                    @if (!string.IsNullOrWhiteSpace(Model.PreviewText))
+                    {
+                        <p class="page-intro__text">@Model.PreviewText</p>
+                    }
+
                 </div>
             </div>
             <div class="page-intro__image-outer">
                 <div class="page-intro__image">
-                    <div class="page-intro__img has-cover" style="background-image: url('@Model.Image.Url');"></div>
+                    <div class="page-intro__img has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
                     <span class="circle circle--blue circle--large"></span>
                     <span class="circle circle--mint"></span>
                 </div>
