--- a/Patrija.Web/Views/Partials/NestedContent/_Donations.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_Donations.cshtml
@@ -1,19 +1,29 @@
 ﻿@using Patrija.Core.ViewModels.Partials.Features;
 @inherits UmbracoViewPage<DonationsViewModel>
 
-    <div class="donations">
-        <div class="wrap wrap--small">
-            <div class="donations__content">
+<div class="donations">
+    <div class="wrap wrap--small">
+        <div class="donations__content">
+            @if (!string.IsNullOrWhiteSpace(Model.Title))
+            {
                 <h3 class="h3 donations__title">@Model.Title</h3>
+            }
+            @if (!string.IsNullOrWhiteSpace(Model.Text))
+            {
                 <p class="donations__text">@Model.Text</p>
-            </div>
+            }
+        </div>
+        @if (Model.Images != null && Model.Images.Any())
+        {
             <div class="donations__logos">
                 @foreach (var logoImage in Model.Images)
                 {
                     <div class="donations__logo">
-                        <img class="donations__logo-image" src="@logoImage.Url" alt="">
+                        <img class="donations__logo-image" src="@logoImage.Url" alt="@logoImage.AlternateText">
                     </div>
                 }
             </div>
-        </div>
+        }
+
     </div>
+</div>
