--- a/Patrija.Web/Views/Partials/NestedContent/_ImageWithText.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_ImageWithText.cshtml
@@ -6,14 +6,25 @@
 		<div class="image-text__container@(Model.ContentPosition == ContentPosition.Right ? "image-text__container--reverse" : string.Empty)">
 			<div class="image-text__image-outer">
 				<div class="image-text__image">
-					<div class="image-text__img has-cover" style="background-image: url(@Model.Image.Url)"></div>
+					<div class="image-text__img has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
 				</div>
 			</div>
-			<div class="image-text__content">
-				<h2 class="h2 image-text__title">@Model.Title</h2>
-				<p class="image-text__text">@Model.Text</p>
-				@Html.Partial("Link", Model.ReadMore, new ViewDataDictionary() { { "className", "btn" } })
-			</div>
+            <div class="image-text__content">
+                @if (!string.IsNullOrWhiteSpace(Model.Title))
+                {
+                    <h2 class="h2 image-text__title">@Model.Title</h2>
+                }
+                @if (!string.IsNullOrWhiteSpace(Model.Text))
+                {
+                    <p class="image-text__text">@Model.Text</p>
+                }
+
+                @if (Model.ReadMore != null)
+                {
+                    @Html.Partial("Link", Model.ReadMore, new ViewDataDictionary() { { "className", "btn" } })
+                }
+
+            </div>
 		</div>
 	</div>
 </div>
