Update LinksList.cshtml - add null checking

--- a/Patrija.Web/Views/Partials/NestedContent/_LinksList.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_LinksList.cshtml
@@ -1,20 +1,22 @@
 ﻿@using Patrija.Core.ViewModels.Partials.Home;
 @inherits UmbracoViewPage<LinksListViewModel>
-    
+
 @if (Model.Items.Any())
 {
     <div class="links-list">
         <div class="wrap wrap--small">
-            <h3 class="h3 links-list__title">@Model.Title</h3>
-        
+            @if (!string.IsNullOrWhiteSpace(Model.Title))
+            {
+                <h3 class="h3 links-list__title">@Model.Title</h3>
+            }
+
             <ul class="links-list__list">
                 @foreach (var link in Model.Items)
                 {
                     <li class="links-list__item">
-				        @Html.Partial("Link", link, new ViewDataDictionary() { { "className", "btn links-list__link" } })
+                        @Html.Partial("Link", link, new ViewDataDictionary() { { "className", "btn links-list__link" } })
                     </li>
                 }
-                
             </ul>
             <div class="circle circle--mint links-list__circle links-list__circle--left"></div>
             <div class="circle circle--blue links-list__circle links-list__circle--right"></div>
