Update TaggedFeature.cshtml  - add null checking

--- a/Patrija.Web/Views/Partials/NestedContent/_TaggedFeature.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_TaggedFeature.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Activities.Statements
-@using Patrija.Core.ViewModels.Partials.Features
+﻿@using Patrija.Core.ViewModels.Partials.Features
 @inherits UmbracoViewPage<TaggedFeatureViewModel>
 
 @{
@@ -9,19 +8,31 @@
 <div class="featured-project">
 	<div class="wrap">
 		<div class="featured-project__item featured-project__item--@positionClassSuffix">
-			<div class="featured-project__text">
-				<h6 class="h6 featured-project__tag">@Model.Tag</h6>
-				<h2 class="h2 featured-project__title">@Model.Title</h2>
-				<p class="featured-project__text">@Model.Text</p>
-				@Html.Partial("Link", Model.ReadMore, new ViewDataDictionary() { { "className", "btn" } })
-			</div>
+            <div class="featured-project__text">
+                @if (!string.IsNullOrWhiteSpace(Model.Tag))
+                {
+                    <h6 class="h6 featured-project__tag">@Model.Tag</h6>
+                }
+                @if (!string.IsNullOrWhiteSpace(Model.Title))
+                {
+                    <h2 class="h2 featured-project__title">@Model.Title</h2>
+                }
+                @if (!string.IsNullOrWhiteSpace(Model.Text))
+                {
+                    <p class="featured-project__text">@Model.Text</p>
+                }
+                @if (Model.ReadMore != null)
+                {
+                    @Html.Partial("Link", Model.ReadMore, new ViewDataDictionary() { { "className", "btn" } })
+                }
+            </div>
 			<div class="featured-project__image-outer @(Model.ContentPosition == ContentPosition.Right ? "featured-project__image-outer--reverse" : string.Empty)">
 				<div class="featured-project__mask featured-project__mask--@positionClassSuffix">
 					@if (Model.AdditionalImage != null)
 					{
 						<img class="featured-project__additional-image" src="@Model.AdditionalImage.Url" alt="@Model.AdditionalImage.AlternateText">
 					}
-					<div class="featured-project__image has-cover" style="background-image: url('@(Model.Image.Url)');"></div>
+					<div class="featured-project__image has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
 				</div>
 			</div>
 		</div>
