--- a/Patrija.Web/Views/Home.cshtml
+++ b/Patrija.Web/Views/Home.cshtml
@@ -13,7 +13,8 @@
     Html.RenderAction<NestedContentController>(c => nameof(c.TaggedFeature), new { viewModel = feature });
 }
 
-@{
+@if (Model.HomeSupport != null)
+{
     Html.RenderAction<ContainerController>(c => nameof(c.HomeSupportContainer), new { viewModel = Model.HomeSupport });
 }
 
@@ -22,10 +23,12 @@
     Html.RenderAction<NestedContentController>(c => nameof(c.LinksList), new { viewModel = linkList });
 }
 
-@{
+@if (Model.AboutUs != null)
+{
     Html.RenderAction<NestedContentController>(c => nameof(c.AboutUs), new { viewModel = Model.AboutUs });
 }
 
-@{ 
+@if (Model.JoinUs != null)
+{
     Html.RenderAction<NestedContentController>(c => nameof(c.JoinUs), new { viewModel = Model.JoinUs });
 }
