--- a/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
@@ -5,6 +5,11 @@
         <div class="page-intro__container">
             <div class="page-intro__content">
                 <div class="page-intro__content-align">
+                    @if(Model.FormatedPublishDate != null)
+                    {
+                        <h5>@Model.FormatedPublishDate</h5>
+                    }
+
                     @if (!string.IsNullOrWhiteSpace(Model.Title))
                     {
                         <h1 class="h2 page-intro__title">@Model.Title</h1>
