Update Two/ThreeColumn BlogBlock - modify switched names

--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
@@ -1,42 +1,44 @@
 ﻿@model Patrija.Core.ViewModels.Shared.NewsBlogBlockViewModel
 
-<div class="articles has-cover" style="background-image: url('{{bgImage}}');">
+<div class="news-list">
     <div class="wrap wrap--normal">
-        <h2 class="h2 articles__title">@Model.BlogCategoryName</h2>
-        <div class="articles__container  js-three_column_article_container" data-on-load-number="@Model.NumberOfThreeColumnArticlesOnLoad">
-            @if (Model.ThreeColumnArticles != null && Model.ThreeColumnArticles.Any())
-            {
-                foreach (var article in Model.ThreeColumnArticles)
+        <h2 class="h2 news-list__title">@Model.BlogCategoryName</h2>
+        @if (Model.ThreeColumnArticles.Any())
+        {
+            <div class="news-list__container js-three_column_article_container" data-on-load-number="@Model.NumberOfThreeColumnArticlesOnLoad">
+                @foreach (var article in Model.ThreeColumnArticles)
                 {
                     if (article.BlogIntro != null)
                     {
-                        <div class="articles__item">
-                            <div class="articles__item-img">
-                                <a href="@article.Url">
-                                    <span class="articles__item-image has-cover" style="@if (article.BlogIntro.Image != null) {<text>background-image: url('@article.BlogIntro.Image.Url');</text>}"></span>
-                                </a>
+                        <div class="news-list__item">
+                            <div class="news-list__image has-cover" style="@if (article.BlogIntro.Image != null) {<text>background-image: url('@article.BlogIntro.Image.Url');</text>}"></div>
+                            <div class="news-list__meta">
+                                <span class="news-list__date">@article.BlogIntro.FormatedPublishDate</span>
                             </div>
-                            <div class="articles__item-content">
-                                <span class="articles__item-date">@article.BlogIntro.FormatedPublishDate</span>
-                                @if (!string.IsNullOrWhiteSpace(article.BlogIntro.Title))
-                                {
-                                    <h4 class="h6 articles__item-title">
-                                        <a href="@article.Url">@article.BlogIntro.Title</a>
-                                    </h4>
-                                }
-                            </div>
+                            @if (!string.IsNullOrWhiteSpace(article.BlogIntro.Title))
+                            {
+                                <h4 class="h6 news-list__item-title">
+                                    <a href="@article.Url">@article.BlogIntro.Title </a>
+                                </h4>
+                            }
+                            @if (!string.IsNullOrWhiteSpace(article.BlogIntro.PreviewText))
+                            {
+                                <p class="news-list__text">
+                                    @Html.Raw(article.BlogIntro.PreviewText))
+                                </p>
+                            }
                         </div>
                     }
                 }
-            }
 
-        </div>
-        @if (Model.TotalNumberOfExistingArticles > Model.NumberOfThreeColumnArticlesOnLoad)
-        {
-            <div class="articles__buttons">
-                <button class="btn btn--mint articles__load-more js-load-btn" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
             </div>
         }
-
+        @if (Model.TotalNumberOfExistingArticles > Model.NumberOfThreeColumnArticlesOnLoad)
+        {
+            <div class="news-list__buttons">
+                <button class="btn btn--mint news-list__load-more js-load-btn" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
+            </div>
+        }
     </div>
+
 </div>
