--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
@@ -1,44 +1,42 @@
 ﻿@model Patrija.Core.ViewModels.Shared.NewsBlogBlockViewModel
 
-<div class="news-list">
+<div class="articles has-cover" style="background-image: url('{{bgImage}}');">
     <div class="wrap wrap--normal">
-        <h2 class="h2 news-list__title">@Model.BlogCategoryName</h2>
-        @if (Model.TwoColumnArticles.Any())
-        {
-            <div class="news-list__container js-two_column_article_container" data-on-load-number="@Model.NumberOfTwoColumnArticlesOnLoad">
-                @foreach (var article in Model.RightArticles)
+        <h2 class="h2 articles__title">@Model.BlogCategoryName</h2>
+        <div class="articles__container  js-two_column_article_container" data-on-load-number="@Model.NumberOfTwoColumnArticlesOnLoad">
+            @if (Model.TwoColumnArticles != null && Model.TwoColumnArticles.Any())
+            {
+                foreach (var article in Model.TwoColumnArticles)
                 {
                     if (article.BlogIntro != null)
                     {
-                        <div class="news-list__item">
-                            <div class="news-list__image has-cover" style="@if (article.BlogIntro.Image != null) {<text>background-image: url('@article.BlogIntro.Image.Url');</text>}"></div>
-                            <div class="news-list__meta">
-                                <span class="news-list__date">@article.BlogIntro.FormatedPublishDate</span>
+                        <div class="articles__item">
+                            <div class="articles__item-img">
+                                <a href="@article.Url">
+                                    <span class="articles__item-image has-cover" style="@if (article.BlogIntro.Image != null) {<text>background-image: url('@article.BlogIntro.Image.Url');</text>}"></span>
+                                </a>
                             </div>
-                            @if (!string.IsNullOrWhiteSpace(article.BlogIntro.Title))
-                            {
-                                <h4 class="h6 news-list__item-title">
-                                    <a href="@article.Url">@article.BlogIntro.Title </a>
-                                </h4>
-                            }
-                            @if (!string.IsNullOrWhiteSpace(article.BlogIntro.PreviewText))
-                            {
-                                <p class="news-list__text">
-                                    @Html.Raw(article.BlogIntro.PreviewText))
-                                </p>
-                            }
+                            <div class="articles__item-content">
+                                <span class="articles__item-date">@article.BlogIntro.FormatedPublishDate</span>
+                                @if (!string.IsNullOrWhiteSpace(article.BlogIntro.Title))
+                                {
+                                    <h4 class="h6 articles__item-title">
+                                        <a href="@article.Url">@article.BlogIntro.Title</a>
+                                    </h4>
+                                }
+                            </div>
                         </div>
                     }
                 }
+            }
 
-            </div>
-        }
+        </div>
         @if (Model.TotalNumberOfExistingArticles > Model.NumberOfTwoColumnArticlesOnLoad)
         {
-            <div class="news-list__buttons">
-                <button class="btn btn--mint news-list__load-more js-load-btn" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
+            <div class="articles__buttons">
+                <button class="btn btn--mint articles__load-more js-load-btn" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
             </div>
         }
-    </div>
 
+    </div>
 </div>
