--- a/html/src/scss/modules/_contact-map.scss
+++ b/html/src/scss/modules/_contact-map.scss
@@ -15,6 +15,13 @@
 		top: 78.5%;
 		left: -6.8%;
 	}
+	@include mq-down(md) {
+		height: 550px;
+		margin-bottom: 30px;
+	}
+	@include mq-down(sm) {
+		height: 650px;
+	}
 }
 
 .contact-map__container {
@@ -22,6 +29,12 @@
 	width: 100%;
 	height: 100%;
 	padding: 176px 0 106px 30px;
+	@include mq-down(md) {
+		padding: 176px 0 60px 30px;
+	}
+	@include mq-down(sm) {
+		padding: 30px 0 0;
+	}
 }
 
 .contact-map__content {
@@ -29,24 +42,41 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
+	@include mq-down(sm) {
+		height: auto;
+	}
 }
 
 .contact-map__title {
 	max-width: 52%;
+	@include mq-down(sm) {
+		max-width: 100%;
+	}
 }
 
 .contact-map__text {
 	max-width: 49%;
 	margin-bottom: 34px;
 	padding-top: 26px;
+	@include mq-down(sm) {
+		max-width: 100%;
+	}
 }
 
 .contact-map__image {
 	position: absolute;
-	width: 34.48vw;
+	width: 40%;
 	top: 9.1%;
-	left: 62.4%;
-	padding-bottom: 40.22%;
+	left: 60%;
+	padding-bottom: 36.22%;
+	@include mq-down(sm) {
+		position: relative;
+		top: 3%;
+		left: 50%;
+		transform: translate(-50%);
+		padding-bottom: 70%;
+		width: 80%;
+	}
 	&::after {
 		content: '';
 		position: absolute;
@@ -67,19 +97,4 @@
 		width: 100%;
 		height: 100%;
 	}
-}
-
-.contact-map__img {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-.contact-map__circle {
-	position: absolute;
-	border-radius: 50%;
-	z-index: 100;
-	display: block;
 }
