Finished AboutUsPage implementation

--- a/Patrija.Web/Views/Partials/Container/_AboutUsProjectsContainer.cshtml
+++ b/Patrija.Web/Views/Partials/Container/_AboutUsProjectsContainer.cshtml
@@ -2,4 +2,35 @@
 @inherits UmbracoViewPage<FeaturedProjectsContainerViewModel>
 
 
-<p>to do</p>
+<div class="project">
+    <div class="wrap wrap--medium">
+        <h2 class="h2 project__main-title">Aktuelni projekti</h2>
+        <div class="project__item project__item--normal">
+            <div class="project__item-content">
+                <h2 class="h2 project__title">NS Klub “Kompas”</h2>
+                <p class="project__text">Lorem ipsum dolor amet vinyl subway tile etsy PBR&amp;B cred, hoodie cronut. Vexillologist wolf kickstarter paleo. Snackwave DIY cred crucifix taiyaki messenger bag. Fashion axe cloud bread leggings freegan, crucifix skateboard vexillologist tbh 8-bit.Lore</p>
+                <a class="btn" href="javascript:;">Saznajte više</a>
+            </div>
+            <div class="project__image-outer project__image-outer--normal">
+                <div class="project__image project__image--normal">
+                    <div class="project__img has-cover" style="background-image: url('assets/images/content/project-left.jpg');"></div>
+                    <span class="circle circle--blue circle--large"></span>
+                </div>
+            </div>
+        </div>
+        <div class="project__item project__item--reverse">
+            <div class="project__item-content">
+                <h2 class="h2 project__title">Lice Ulice NS</h2>
+                <p class="project__text">Lorem ipsum dolor amet vinyl subway tile etsy PBR&amp;B cred, hoodie cronut. Vexillologist wolf kickstarter paleo. Snackwave DIY cred crucifix taiyaki messenger bag. Fashion axe cloud bread leggings freegan, crucifix skateboard vexillologist tbh 8-bit.Lore</p>
+                <a class="btn" href="javascript:;">Saznajte više</a>
+            </div>
+            <div class="project__image-outer project__image-outer--reverse">
+                <div class="project__image project__image--reverse">
+                    <img class="project__additional-image" src="assets/images/content/project-additional-right.jpg" alt="">
+                    <div class="project__img has-cover" style="background-image: url('assets/images/content/project-right.jpg');"></div>
+                    <span class="circle circle--mint circle--tiny"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
