--- a/html/src/scss/modules/_news-slider.scss
+++ b/html/src/scss/modules/_news-slider.scss
@@ -51,6 +51,8 @@
 .news-slider__title {
 	text-align: center;
 	margin-bottom: 45px;
+	position: relative;
+	z-index: 1;
 }
 
 .news-slider__container {
