--- a/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
@@ -23,11 +23,11 @@
                     <div class="about-us__image">
                         <div class="about-us__img has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
                     </div>
-                    @*<div class="about-us__shape">
-                <img src="{{shape}}" alt="">
-                </div>*@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="about-us__shape">
+        <img src="https://1.bp.blogspot.com/-XcDRESNgY9w/XHpgsYlv2zI/AAAAAAAAIQY/YUAU35Ut6hwTenG8ax0_igJobgmaHTASACK4BGAYYCw/s1600/icon%2Bshape%2B01.png" alt="">
     </div>
 </div>
