Style the blog date and blog items on News page

--- a/Patrija.Web/Views/Partials/Listing/_TwoColumnsArticlesListing.cshtml
+++ b/Patrija.Web/Views/Partials/Listing/_TwoColumnsArticlesListing.cshtml
@@ -16,7 +16,7 @@
                 @if (!string.IsNullOrWhiteSpace(article.BlogIntro.Title))
                 {
                     <h4 class="h6 articles__item-title">
-                        <a href="@article.Url">@article.BlogIntro.Title</a>
+                        <a class="articles__item-link" href="@article.Url">@article.BlogIntro.Title</a>
                     </h4>
                 }
             </div>
