--- a/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
@@ -7,7 +7,7 @@
                 <div class="page-intro__content-align">
                     @if(Model.FormatedPublishDate != null)
                     {
-                        <h5>@Model.FormatedPublishDate</h5>
+                        <h5 class="page-intro__date">@Model.FormatedPublishDate</h5>
                     }
 
                     @if (!string.IsNullOrWhiteSpace(Model.Title))
